# katti

./: .gitignore  LICENSE  MANIFEST.in  README.md  note_for_next_dev.txt  pyproject.toml  requirements.txt  setup.py
katti/: config.json  config.txt  configloader.py  constants.py  katti.py  localproblems.py  main.py  parser.py  selected_ids.json  submiter.py  unsolved_problems.json  user_config.json  utils.py  webkattis.py
katti/tests/: carrots_get_response.html  submission_get_response.html  test_load_config.py  test_webkattis.py
src/: katti.py
tests/: test_configloader.py  test_webkattis.py
