[project]
name = "katti"
version = "0.0.3"
description = "Commandline tool for Kattis problems"
authors = [
    { name = "Matthew Freestone", email = "matthewfreestone1593@gmail.com" }
]
requires-python = ">3.7"
readme = "README.md"
dependencies = [
    "requests>=2",
    "beautifulsoup4>=4",
    "setuptools>=69",
]
keywords = ["kattis"]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/MatthewFreestone/katti"

[project.scripts]
katti = "katti.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "mypy>=1.9.0",
    "types-requests>=2.31.0.20240311",
    "types-beautifulsoup4>=4.12.0.20240229",
    "types-setuptools>=69.2.0.20240317",
]
